[gd_scene load_steps=15 format=3 uid="uid://vu47kvvgvwgf"]

[ext_resource type="Script" path="res://Scenes/Abilities/fireball.gd" id="1_j16y7"]
[ext_resource type="Texture2D" uid="uid://brgwxa225jthh" path="res://Sprites/Abilities/Fireball.png" id="2_vsvsi"]
[ext_resource type="Texture2D" uid="uid://6gg5ci0onl56" path="res://Sprites/Abilities/FireballExplosion.png" id="3_6kcvh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nakcq"]
atlas = ExtResource("2_vsvsi")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oies"]
atlas = ExtResource("2_vsvsi")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yue7b"]
atlas = ExtResource("2_vsvsi")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdtws"]
atlas = ExtResource("2_vsvsi")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr65u"]
atlas = ExtResource("3_6kcvh")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi5mc"]
atlas = ExtResource("3_6kcvh")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfdv7"]
atlas = ExtResource("3_6kcvh")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kolyr"]
atlas = ExtResource("3_6kcvh")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o6sn"]
atlas = ExtResource("2_vsvsi")
region = Rect2(0, 512, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_82gim"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nakcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oies")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yue7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdtws")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr65u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi5mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfdv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kolyr")
}],
"loop": false,
"name": &"explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o6sn")
}],
"loop": true,
"name": &"secret",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5i48f"]
radius = 74.1687

[node name="fireball" type="Node2D"]
script = ExtResource("1_j16y7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -66)
scale = Vector2(0.703125, 0.703125)
sprite_frames = SubResource("SpriteFrames_82gim")
animation = &"explosion"
frame = 3
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5i48f")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
